--- a/css/index.css
+++ b/css/index.css
@@ -20,10 +20,12 @@ html{
   overflow-x: hidden;
   scroll-padding-top: 5.5rem;
   scroll-behavior: smooth;
+  min-width: 320px;
 }
 body {
   background-color: rgb(0, 214, 214);
   height: 100vh;
+
 }
 section:nth-child(even) {
   background-color: #000000;
@@ -62,6 +64,8 @@ header {
 }
 .nav-link {
   font-size: 1.5rem;
+  font-weight: 500;
+  color:#ffffff !important; 
 }
 .nav-link:hover {
   font-size: 1.6rem;
@@ -71,6 +75,7 @@ header {
   width:8rem;
   border-radius: 1.5rem;
   margin: 0 auto;
+  color: #000 !important;
 }
 .navbar-nav{
   align-items: end;
@@ -90,7 +95,7 @@ header {
  padding-bottom: 50%;
  overflow: hidden;
  background-color: rgb(255, 184, 0);
- clip-path: circle(35% at 100% 100%);
+ clip-path: circle(25rem at 100% 100%);
 } 
 /* seccionprincipal */
 .container-content{
@@ -98,7 +103,8 @@ header {
     justify-content: space-around;
     width: 90%;
     align-items: center;
-    gap: 3rem;   
+    gap: 3rem;  
+    height: 85vh; 
 }
 .fondoImagen {
   margin-top: 7rem;
@@ -352,6 +358,9 @@ header {
 
 /* FIN MEDA 660PX */
 @media(max-width:660px) {
+  html {
+    font-size: 60%;
+  }
   .container-content{
     flex-direction: column;
     align-items: center;
@@ -367,7 +376,7 @@ header {
 /* media 426px */
 @media(max-width:426px) {
   html {
-    font-size: 55%;
+    font-size: 50%;
   }
   
   .circulo{
@@ -379,6 +388,9 @@ header {
     height: auto;
     padding: 2rem 0;
     justify-content: center;
+  }
+  .container-content{
+    gap: 7rem;
   }
 }
    
