--- a/navbar/menuHamburguesa.css
+++ b/navbar/menuHamburguesa.css
@@ -1,22 +1,49 @@
 /* 
   COPIAR TODO Y PEGAR EN SU ARCHIVO CSS
 */
-
-/* NAVBAR */
-  .navbarBaile{
-    background-color:rgb(0, 214, 214) !important;
-  }
-  .navbar-brand {
-    font-size: 1.5rem;
-  }
-  .nav-link {
-    font-size: 1.1rem;
-    margin-left: 1rem;
-    text-align: right;
-  }
-  .nav-link:hover{
-    font-size: 1.3rem;
-  }
-  .boton{
-    background-color: #ffb800 !important;
-  }
+:root {
+  --box-shadow: 0 .5rem 1.5rem rgba(0, 0, 0, .1)
+}
+header {
+  width: 100%;
+  padding: .6rem 0;
+  display: flex;
+  align-items: center;
+  position: fixed;
+  top: 0;
+  right: 0;
+  left: 0;
+  background-color: rgb(0, 214, 214);
+  box-shadow: var(--box-shadow);
+  z-index: 3;
+}
+/* navbar */
+.navbar-brand img {
+  width: 190px;
+  height: 140px;
+  position: fixed;
+  top:0;
+  left: 0;
+}
+.nav-link {
+  font-size: 1.5rem;
+  font-weight: 500;
+  color:#ffffff !important; 
+}
+.nav-link:hover {
+  font-size: 1.6rem;
+}
+.btn {
+  background-color: rgb(255, 184, 0);
+  width:8rem;
+  border-radius: 1.5rem;
+  margin: 0 auto;
+  color: #000 !important;
+}
+.navbar-nav{
+  align-items: end;
+  text-align: center;
+}
+.navbar-nav li{ 
+  width: 10rem;
+}
