--- a/css/instalaciones.css
+++ b/css/instalaciones.css
@@ -1,142 +1,122 @@
-/* font-family: 'Open Sans', sans-serif;
-*/
-main{
-    text-align: center;
-    font-weight: bolder;
-  }
-body {
-    background-color: rgba(32, 192, 192, 0.877);
-    font-family: 'Open Sans', sans-serif;
-    font-size: 16px;
-    line-height: 20px;
-  }
-  
-  /*HEADER*/
-  header{
-    display: flex;
-    height: 96px;
-    border-bottom:  1px solid rgba(128, 128, 128, 0.63); 
-  }
-  
-  header img{
-    width: 170px;
-    height: 118px;
-    margin: 10px 0;
-  }
-  
-  header h1{
-    color:black;
-    font-size: 30px;
-    display: inline-block;
-    position: absolute;
-    margin: 72px 0;
-  }
-  
-  /*NAV*/
-  header nav{
-    width: 100%;
-    margin: 37px 25px 0;
-    display: flex;
-    justify-content: end;
-  
-  }
-  
-  header nav ul {
-    list-style: none;
-    display: flex;
-  }
-  
-  header nav ul li {
-    flex-grow: 1;
-  }
-  
-  .bailes{
-    background-color: rgb(255, 184, 0);
-    height: 40px;
-    border-radius: 125px;
-  }
-  
-  header nav ul li a {
-    color:black;
-    text-decoration: none;
-    display: block;
-    text-align: center;
-    font-style: italic;
-    padding: 10px;
-  }
-  
-  header nav ul li a:hover{
-    color: rgba(0, 0, 0, 0.4);
-  }
-  main{
-    margin: 0 10%;
-  }
+/* font-family: 'Open Sans', sans-serif; */
+:root {
+  --box-shadow: 0 .5rem 1.5rem rgba(0, 0, 0, .1)
+}
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  list-style: none;
+  text-decoration: none;
+}
+.conteiner{
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: url("../imagenes/fondoInicioSesion.png");
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+}
+.conteinerContent{
+  background-color: rgba(255,255,255,0.5);
+  border: .1rem solid rgb(0, 214, 214);
+  border-radius: .3rem;
+  padding: 2rem;
+  font-weight: 600;
+}
+.contenidoinicioSesion{
+  display: flex;
+  flex-direction: column;
+}
 
-/*FOOTER*/
-.footer{
-    background: black;
-    width: 100%;
-    height: 200px;
-    text-align: center;
-    
-  }
+form{
+  display: flex;
+  flex-direction: column;
+  line-height: 1;
+  margin: 0 auto;
+  flex-wrap: wrap;
+  width: 95%;
+  align-content: center;
+}
+form label{
+  margin-left: .3rem;
+  font-size: 1rem;
+  font-weight: 500;
+}
+form input{
+  margin-bottom: .5rem;
+  width: 70%;
+  padding: .3rem;
+  border-radius: .3rem;
+  outline: none;
+  border: .1rem solid rgb(0, 214, 214);
+}
+
+form .botonesFormulario{
+  display: flex;
+  justify-content: center;
+  gap: 1rem;  
+  margin-top: .5rem; 
   
-  .footer h3{
-    color: #ffffff;
-    padding-top: 30px
-  }
-  
-  .footer p{
-    color: #ffffff;
-    font-size: 13px;
-  }
-  
-  .footer a{
-    text-decoration: none;
-  }
-  
-  .icon-footer{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  
-  .fa-brands{
-    font-size: 35px; 
-    margin: 10px;
-    background: #fff;
-    width: 50px;
-    height: 50px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 100%;
-  }
-  
-  .fa-instagram{
-    background: linear-gradient(to top right, #fcde30, #e9712a, #d2313b, #ae4198, #7540a1, #5443a8);
-    color: #ffffff;
-  }
-  
-  .fa-instagram:hover{
-    color: black;
-  }
-  
-  .fa-facebook{
-    color: #1E4595;
-  }
-  
-  .fa-facebook:hover{
-    background: #1E4595;
-    color: #ffffff;
-  }
-  
-  .fa-twitter:hover{
-    background: linear-gradient(to right top, #42a9ec, #358de6);
-    color: #ffffff;
-  }
-  
-  .fa-twitter{
-    color: #358de6;
-    background-color: #ffffff;
-  }
+}
+form .botonesFormulario button{
+  padding: .1rem;
+  width: 100px;
+  padding: .5rem .1rem;
+  border-radius: .5rem;
+  border: none;
+  font-size: 1rem;
+  font-weight: 500;
+}
+form .botonesFormulario .submit{
+  background-color: rgb(0, 0, 255);
+  color: white;
+}
+form .botonesFormulario .submit:hover{
+  background-color: rgb(0, 0, 200);
+}
+form .botonesFormulario .reset{
+  background-color: rgb(255, 0, 0);
+  color: white;
+}
+form .botonesFormulario .reset:hover{
+  background-color: rgb(200, 0, 0);
+}
+.contenidoinicioSesion p{
+  width: 100%;
+  text-align: center;
+  margin-top: .5rem;
+}
+.contenidoinicioSesion a{
+  text-decoration: none;
+  color: rgb(0, 214, 214);
+  font-weight: 700;
+  margin-left: 3px;
+  text-transform: capitalize;
+}
+.contenidoinicioSesion a:hover{
+  color: rgba(0,214,214,0.8);
+}
+
+.btn-redSocial{
+  display: flex;
+  flex-direction: column;
+  margin: 0 auto;
+  width: 70%;
+  gap: 1rem;
+}
+.btn-redSocial button{
+  height: 2.5rem;
+  text-align: center;
+  border-radius: .3rem;
+}
+
+.btn-redSocial a{
+  display: inline-block;
+
+}
+
+.btn-redSocial img{
+  width: 20px;
+}
