--- a/css/index.css
+++ b/css/index.css
@@ -67,15 +67,15 @@ header {
   font-weight: 500;
   color:#ffffff !important; 
 }
-.nav-link:hover {
-  font-size: 1.6rem;
-}
 .btn {
   background-color: rgb(255, 184, 0);
-  width:8rem;
+  width:11rem;
   border-radius: 1.5rem;
   margin: 0 auto;
   color: #000 !important;
+}
+.btn:hover{
+  background-color: rgb(232, 167, 1);
 }
 .navbar-nav{
   align-items: end;
