--- a/css/Bailes.css
+++ b/css/Bailes.css
@@ -2,7 +2,6 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  text-decoration: none;
 }
 
 /*Prueba 1*/
@@ -13,7 +12,10 @@ body {
 /*Prueba Transicion 1*/
 
 a:hover{
-  text-decoration: underline;
+  text-decoration: none;
+  font-size: 1.5rem;
+  font-weight: 500;
+  color: #ffffff !important; 
 }
 
 /*prueba Logo*/
@@ -33,14 +35,12 @@ body h1 {
 }
 
 /*Prueba Container*/
-
 .container {
   display: inline-block;
   position: relative;
   justify-content: center;
 }
-
-.container h2, h3, h4 {
+.container h2,h3, h4 {
   margin: 2%;
   padding: 1%;
     font-family:'Franklin Gothic Medium';
@@ -49,9 +49,7 @@ body h1 {
     margin-top: 10px;
     text-decoration: underline;
     text-align: center;
-
 }
-
 
 .texto {
   margin: 1%;
@@ -67,8 +65,8 @@ body h1 {
     left: 30vw;
     width: 35vw;
     border-radius: 5vw;
+    background-color: rgba(148, 243, 255, 0.471);
   }
-
 
 /*Prueba3*/
 header {
@@ -78,19 +76,7 @@ header {
   text-decoration: none;
 }
 
-header h1 {
-  color:black;
-  font-size: 40px;
-  font-weight: 100;
-  font-style: normal;
-  display: inline-block;
-  position: absolute;
-  bottom: auto;
-  margin-left: 10px;
-}
-
 /*Prueba4*/
-
 header nav {
   width: 100%;
   margin: 50px 0;
@@ -103,16 +89,13 @@ header nav ul {
   flex-wrap: wrap;
 }
 header nav ul li a {
-  color:black;
+  color: #000;
   text-decoration: none;
   display: block;
   text-align: center;
   font-style: normal;
   font-size: 20px;
   padding: 10px;
-}
-header nav ul li a:hover{
-  color: rgba(0, 0, 0, 0.4);
 }
 
 /*Prueba5*/
@@ -121,27 +104,22 @@ header nav ul li a:hover{
   text-align: center; 
   padding:2% 0;
 }
-
-.footer h3{
+.footer h5{
   color: #ffffff;
   font-size: 1.5vw;
 }
-
 .footer p{
   color: #ffffff;
   font-size: 1vw;
 }
-
 .footer a{
   text-decoration: none;
 }
-
 .icon-footer{
   display: flex;
   justify-content: center;
   align-items: center;
 }
-
 .fa-brands{
   font-size: 2vw; 
   margin: 1vw;
@@ -159,25 +137,20 @@ header nav ul li a:hover{
   background: linear-gradient(to top right, #fcde30, #e9712a, #d2313b, #ae4198, #7540a1, #5443a8);
   color: #ffffff;
 }
-
 .fa-instagram:hover{
   color: black;
 }
-
 .fa-facebook{
   color: #1E4595;
 }
-
 .fa-facebook:hover{
   background: #1E4595;
   color: #ffffff;
 }
-
 .fa-twitter:hover{
   background: linear-gradient(to right top, #42a9ec, #358de6);
   color: #ffffff;
 }
-
 .fa-twitter{
   color: #358de6;
   background-color: #ffffff;
@@ -185,7 +158,6 @@ header nav ul li a:hover{
 
 /*Media Queries*/
 @media (max-width:1024px){
-
   .logo{
     width: 10%;
 } 
@@ -194,13 +166,11 @@ header nav ul li a:hover{
    position: relative;
    justify-content: center;
  }
-  
 .texto {
  text-align: justify;
  font-family: 'Franklin Gothic Medium';
  font-size: 22px;
   }
-
 .container img {
  position: relative;
  padding: 10px;
@@ -209,7 +179,6 @@ header nav ul li a:hover{
  width: 35vw;
  border-radius: 5vw;
 }
-
  header h1 {
    color:black;
    font-size: 40px;
@@ -220,7 +189,6 @@ header nav ul li a:hover{
    bottom: auto;
    margin-left: 10px;
  }
- 
  header nav {
    width: 100%;
    margin: 50px 0;
@@ -244,7 +212,6 @@ header nav ul li a:hover{
  header nav ul li a:hover{
    color: rgba(0, 0, 0, 0.4);
  }
- 
  .footer{
    background: black;
    text-align: center;
@@ -258,12 +225,10 @@ header nav ul li a:hover{
    color: #ffffff;
    font-size: 13px;
  }
-
  .fa-brands{
   font-size: 4vw; 
   margin: 2vw;
   width: 6vw;
   height: 6vw;
  }
-
 }
