--- a/css/nosotrxs.css
+++ b/css/nosotrxs.css
@@ -1,11 +1,5 @@
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: Arial, Helvetica, sans-serif;
-}
-
 :root {
+  --box-shadow: 0 .5rem 1.5rem rgba(0, 0, 0, .1);
   --color-background: rgb(0, 214, 214);
   --color-boton: #ffb800;
   --color-background-form: rgba(0, 214, 214, 0.8);
@@ -19,29 +13,77 @@
   --color-twitter-2: #358de6;
 }
 
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  list-style: none;
+  text-decoration: none;
+}
+
+html {
+  font-size: 70%;
+  overflow-x: hidden;
+  scroll-padding-top: 5.5rem;
+  scroll-behavior: smooth;
+  min-width: 320px;
+}
+
 body {
   background-color: var(--color-background);
 }
 
 /* HEADER */
+header {
+  width: 100%;
+  padding: .6rem 0;
+  display: flex;
+  align-items: center;
+  position: fixed;
+  top: 0;
+  right: 0;
+  left: 0;
+  background-color: rgb(0, 214, 214);
+  box-shadow: var(--box-shadow);
+  z-index: 3;
+}
+
+/* NAVBAR */
+.navbar-brand img {
+  width: 190px;
+  height: 140px;
+  position: fixed;
+  top: 0;
+  left: 0;
+}
+
 .nav-link {
-  text-align: right;
+  font-size: 1.5rem;
+  font-weight: 500;
+  color: #ffffff !important;
 }
 
-.nav-link:hover {
-  font-size: 1.3rem;
+.btn {
+  background-color: rgb(255, 184, 0);
+  width: 11rem;
+  border-radius: 1.5rem;
+  margin: 0 auto;
+  color: #000 !important;
 }
 
-.boton {
-  background-color: var(--color-boton);
-  padding:.3rem 1.5rem !important;
-  border-radius: 1vw !important;
+.btn:hover {
+  background-color: rgb(232, 167, 1);
 }
 
-hr {
-  margin-top: -15px;
+.navbar-nav {
+  align-items: end;
+  text-align: center;
 }
 
+.navbar-nav li {
+  width: 10rem;
+}
+/* MAIN */
 main {
   width: 100%;
   padding: 30px 6vw;
@@ -50,6 +92,7 @@ main {
 /* SECCION 1 */
 .section-1 {
   width: 100%;
+  padding-top: 100px;
 }
 
 .section-1 h2 {
@@ -59,22 +102,37 @@ main {
   text-shadow: 3px 3px 4px var(--color-text);
 }
 
-.parrafos {
-  margin: 30px 3vw;
+.item {
+  height: auto;
+  background: linear-gradient(#fff, #d3d3d3);
+  border-radius: 3rem;
+  box-shadow: 0 .3rem .9rem rgba(0, 0, 0, .5);
+  padding: 1.5rem;
+  font-family: 'Times New Roman', Times, serif;
 }
 
-.parf {
-  text-indent: 30px;
-  line-height: 1.5;
-  font-size: 20px;
+.item p {
+  margin-top: .5rem;
+  font-size: 2rem;
+  text-transform: none;
+  text-align: center;
+  font-weight: 500;
+  font-style: italic;
 }
 
 .section-1 img {
+  height: auto;
   width: 100%;
-  border-radius: 25px;
+  border-radius: 3rem;
+  margin: 3rem 0;
 }
 
-/* SECTION 2 */
+/* SECCION 3 */
+.section-3 {
+  width: 100%;
+}
+
+/* SECCION 2 */
 .section-2 {
   position: relative;
   margin: 30px 0;
@@ -82,24 +140,26 @@ main {
 }
 
 .section-2 iframe {
-  width: 90vw;
-  height: 100vh;
-  border-radius: 15px;
+  height: 70vh;
+  width: 100%;
+  border-radius: 3rem;
+  margin: 3rem 0;
 }
 
 .form-container {
   background-color: var(--color-background-form);
-  width: 50%;
+  width: 70%;
   position: absolute;
-  left: 50%;
+  left: 30%;
   bottom: 0;
-  margin-left: -25%;
-  border-top-left-radius: 15px;
-  border-top-right-radius: 15px;
+  margin-left: -15%;
+  margin-bottom: 38px;
+  border-top-left-radius: 3rem;
+  border-top-right-radius: 3rem;
 }
 
 .title-form {
-  margin: 40px 0;
+  margin: 20px;
   font-size: 28px;
   text-align: center;
   color: rgb(53, 117, 255);
@@ -112,13 +172,14 @@ main {
 }
 
 .box {
+  font-size: 15px;
   margin: 10px 10px;
   box-shadow: 1px 1px 1px 1px var(--color-box-shadow);
 }
 
 .item1,
 .item3 {
-  height: 60px;
+  height: 30px;
   border: 0px;
   outline: none;
   border-radius: 5px;
@@ -126,7 +187,7 @@ main {
 
 .item2,
 .item4 {
-  height: 60px;
+  height: 30px;
   border: 0px;
   outline: none;
   border-radius: 5px;
@@ -134,7 +195,7 @@ main {
 
 .item5 {
   grid-column: 1/3;
-  height: 60px;
+  height: 30px;
   border: 0px;
   outline: none;
   border-radius: 5px;
@@ -142,7 +203,7 @@ main {
 
 .item6 {
   grid-column: 1/3;
-  height: 60px;
+  height: 80px;
   border: 0px;
   outline: none;
   border-radius: 5px;
@@ -155,7 +216,7 @@ main {
   font-size: 20px;
   color: var(--color-text);
   grid-column: 1/3;
-  width: 25%;
+  width: 140px;
   height: 60px;
   border: 0px;
   outline: none;
@@ -168,24 +229,21 @@ main {
   box-shadow: 1px 1px 1px 1px var(--color-box-shadow);
 }
 
-/* FOOTER */
+/*FOOTER*/
 .footer {
-  background: var(--color-background-footer);
+  background: black;
   text-align: center;
-  padding: 10px 0;
-  height: 100px;
+  padding: 2% 0;
 }
 
 .footer h3 {
-  color: var(--color-text);
-  font-size: 15px;
+  color: #ffffff;
+  font-size: 1.5rem;
 }
 
 .footer p {
-  background: var(--color-background-footer);
-  padding-top: 5px;
-  color: var(--color-text);
-  font-size: 10px;
+  color: #ffffff;
+  font-size: 1rem;
 }
 
 .footer a {
@@ -196,15 +254,14 @@ main {
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-bottom: -5px;
 }
 
 .fa-brands {
-  font-size: 29px;
-  margin: 10px 1vw;
-  background: var(--color-text);
-  width: 40px;
-  height: 40px;
+  font-size: 2rem;
+  margin: 1rem;
+  background: #fff;
+  width: 3rem;
+  height: 3rem;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -213,28 +270,249 @@ main {
 
 .fa-instagram {
   background: linear-gradient(to top right, #fcde30, #e9712a, #d2313b, #ae4198, #7540a1, #5443a8);
-  color: var(--color-text);
+  color: #ffffff;
 }
 
 .fa-instagram:hover {
-  color: var(--color-background-footer);
+  color: black;
 }
 
 .fa-facebook {
-  color: var(--color-facebook);
+  color: #1E4595;
 }
 
 .fa-facebook:hover {
-  background: var(--color-facebook);
-  color: var(--color-text);
+  background: #1E4595;
+  color: #ffffff;
 }
 
 .fa-twitter:hover {
-  background: linear-gradient(to right top, var(--color-twitter-1), var(--color-twitter-2));
-  color: var(--color-text);
+  background: linear-gradient(to right top, #42a9ec, #358de6);
+  color: #ffffff;
 }
 
 .fa-twitter {
-  color: var(--color-twitter-2);
-  background-color: var(--color-text);
+  color: #358de6;
+  background-color: #ffffff;
+}
+
+/* MEDIA QUERY */
+/* MEDIA 767PX */
+@media(max-width:767px) {
+  html {
+    font-size: 65%;
+  }
+
+  /* NAVBAR */
+  .navbar-brand img {
+    width: 130px;
+    height: 90px;
+  }
+
+  /* SECCION 1 */
+  .section-1 {
+    width: 100%;
+    padding-top: 50px;
+  }
+
+  .section-1 h2 {
+    text-align: center;
+    font-weight: bold;
+    font-size: 60px;
+    text-shadow: 3px 3px 4px var(--color-text);
+  }
+
+  .item {
+    height: auto;
+    background: linear-gradient(#fff, #d3d3d3);
+    border-radius: 3rem;
+    box-shadow: 0 .3rem .9rem rgba(0, 0, 0, .5);
+    padding: 1.5rem;
+    font-family: 'Times New Roman', Times, serif;
+  }
+
+  .item p {
+    margin-top: .5rem;
+    font-size: 2rem;
+    text-transform: none;
+    text-align: center;
+    font-weight: 500;
+    font-style: italic;
+  }
+
+  .section-1 img {
+    height: auto;
+    width: 100%;
+    border-radius: 3rem;
+    margin: 3rem 0;
+  }
+
+  /* SECCION 2 */
+  .section-2 iframe {
+    margin: 1.5rem 0;
+  }
+
+  .form-container {
+    width: 65%;
+    left: 52%;
+    margin-left: -33%;
+    margin-bottom: 15px;
+  }
+
+  .title-form {
+    margin: 15px;
+    font-size: 24px;
+  }
+
+  .box {
+    margin: 7px 7px;
+  }
+
+  .item1,
+  .item3 {
+    height: 30px;
+  }
+
+  .item2,
+  .item4 {
+    height: 30px;
+  }
+
+  .item5 {
+    grid-column: 1/3;
+    height: 30px;
+  }
+
+  .item6 {
+    grid-column: 1/3;
+    height: 60px;
+  }
+
+  .submit {
+    height: 50px;
+  }
+
+}
+
+/* MEDA 660px */
+@media(max-width:660px) {
+  html {
+    font-size: 60%;
+  }
+
+  /* SECCION 2 */
+  .form-container {
+    left: 32%;
+    margin-left: -15%;
+
+  }
+
+  .title-form {
+    margin: 15px;
+    font-size: 18px;
+  }
+
+  .box {
+    font-size: 11px;
+    margin: 7px 7px;
+  }
+
+  .item1,
+  .item3 {
+    height: 25px;
+  }
+
+  .item2,
+  .item4 {
+    height: 25px;
+  }
+
+  .item5 {
+    grid-column: 1/3;
+    height: 25px;
+  }
+
+  .item6 {
+    grid-column: 1/3;
+    height: 65px;
+  }
+
+  .submit {
+    height: 60px;
+  }
+}
+
+/* MEDIA 426px */
+@media(max-width:426px) {
+  /* SECCION 2 */
+  .title-form {
+    margin: 10px;
+    font-size: 18px;
+  }
+
+  .box {
+    font-size: 10px;
+    margin: 4px 4px;
+    box-shadow: 1px 1px 1px 1px var(--color-box-shadow);
+  }
+
+  .item1,
+  .item3 {
+    height: 20px;
+  }
+
+  .item2,
+  .item4 {
+    height: 20px;
+  }
+
+  .item5 {
+    grid-column: 1/3;
+    height: 20px;
+  }
+
+  .item6 {
+    grid-column: 1/3;
+    height: 40px;
+  }
+}
+
+/* MEDIA 371px */
+@media(max-width:371px) {
+  html {
+    font-size: 50%;
+  }
+
+  /* SECCION 2 */
+  .title-form {
+    font-size: 15px;
+  }
+
+  .box {
+    font-size: 8px;
+    margin: 3px 3px;
+    box-shadow: 1px 1px 1px 1px var(--color-box-shadow);
+  }
+
+  .item1,
+  .item3 {
+    height: 12px;
+  }
+
+  .item2,
+  .item4 {
+    height: 12px;
+  }
+
+  .item5 {
+    grid-column: 1/3;
+    height: 12px;
+  }
+
+  .item6 {
+    grid-column: 1/3;
+    height: 34px;
+  }
+
+
 }
