--- a/css/Bailes.css
+++ b/css/Bailes.css
@@ -2,6 +2,8 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+  list-style: none;
+  text-decoration: none;
 }
 
 /*Prueba 1*/
@@ -13,45 +15,60 @@ body {
 
 a:hover{
   text-decoration: none;
-  font-size: 1.5rem;
-  font-weight: 500;
+  font-size: 1.3rem;
+  font-weight: 400;
   color: #ffffff !important; 
 }
 
 /*prueba Logo*/
 .Logo {
-  width: 12%;
-  position: absolute;
-  top: 1vw;
+  width: 40%;
+  position: sticky;
+  top: 2vw;
 }
+
 
 /* HEADER */
-.nav-link {
-  text-align: right;
-}
 
+header {
+  width: 100%;
+  padding: .6rem 0;
+  display: flex;
+  align-items: right;
+  position: fixed;
+  top: 0;
+  right: 0;
+  left: 0;
+  height: 96px;
+  border-bottom: 2px solid rgba(126, 126, 126, 0.63);
+  text-decoration: none;
+  background-color: rgb(0, 214, 214);
+  box-shadow: var(--box-shadow);
+  z-index: 3;
+}
+/* navbar */
+.nav-link {
+  font-size: 1.3rem;
+  font-weight: 400;
+  text-align: right;
+  color: #000 !important; 
+}
 .nav-link:hover {
   font-size: 1.3rem;
 }
+.navbar-nav{
+  align-items: end;
+  text-align: center;
+}
+.navbar-nav li{ 
+  width: 10rem;
+}
 
 /*Prueba2*/
-
-body h1 {
- font-family: 'Franklin Gothic Medium';
- font-size: 33px;
- text-decoration: underline;
- text-align: center;
-}
-
 /*Prueba Container*/
-.container {
-  display: inline-block;
-  position: relative;
-  justify-content: center;
-}
+
 .container h2,h3, h4 {
-  margin: 2%;
-  padding: 1%;
+  padding: 20px;
     font-family:'Franklin Gothic Medium';
     font-size: 22px;
     line-height: 20px;
@@ -61,14 +78,15 @@ body h1 {
 }
 
 .texto {
-  margin: 1%;
-  padding: 1%;
+  margin: 6px;
+  padding: 10px;
   text-align: justify;
   font-family: 'Franklin Gothic Medium';
   font-style: italic;
   background-color: #42e1ecd0;
   font-size: 22px;
   }
+
   .container img {
     position: relative;
     padding: 10px;
@@ -78,36 +96,6 @@ body h1 {
     border-radius: 5vw;
     background-color: rgba(148, 243, 255, 0.471);
   }
-
-/*Prueba3*/
-header {
-  display: flex;
-  height: 96px;
-  border-bottom: 2px solid rgba(126, 126, 126, 0.63);
-  text-decoration: none;
-}
-
-/*Prueba4*/
-header nav {
-  width: 100%;
-  margin: 50px 0;
-  display: flex;
-  justify-content: end;
-}
-header nav ul {
-  display: flex;
-  list-style: none;
-  flex-wrap: wrap;
-}
-header nav ul li a {
-  color: #000;
-  text-decoration: none;
-  display: inline;
-  text-align: center;
-  font-style: normal;
-  font-size: 20px;
-  padding: 10px;
-}
 
 /*Prueba5*/
 .footer{
@@ -243,3 +231,4 @@ header nav ul li a {
   height: 6vw;
  }
 }
+
