--- a/css/Bailes.css
+++ b/css/Bailes.css
@@ -26,7 +26,9 @@ a:hover{
   position: sticky;
   top: 2vw;
 }
-
+:root {
+  --box-shadow: 0 .5rem 1.5rem rgba(0, 0, 0, .1)
+}
 
 /* HEADER */
 
@@ -47,14 +49,27 @@ header {
   z-index: 3;
 }
 /* navbar */
+.navbar-brand img {
+  width: 190px;
+  height: 140px;
+  position: fixed;
+  top:0;
+  left: 0;
+}
 .nav-link {
-  font-size: 1.3rem;
-  font-weight: 400;
-  text-align: right;
-  color: #000 !important; 
+  font-size: 1.5rem;
+  font-weight: 500;
+  color:#ffffff !important; 
 }
 .nav-link:hover {
-  font-size: 1.3rem;
+  font-size: 1.6rem;
+}
+.btn {
+  background-color: rgb(255, 184, 0);
+  width:8rem;
+  border-radius: 1.5rem;
+  margin: 0 auto;
+  color: #000 !important;
 }
 .navbar-nav{
   align-items: end;
@@ -231,4 +246,3 @@ header {
   height: 6vw;
  }
 }
-
