--- a/css/Bailes.css
+++ b/css/Bailes.css
@@ -15,6 +15,13 @@ a:hover{
 :root {
   --box-shadow: 0 .5rem 1.5rem rgba(0, 0, 0, .1)
 }
+html{
+  font-size: 70%;
+  overflow-x: hidden;
+  scroll-padding-top: 5.5rem;
+  scroll-behavior: smooth;
+  min-width: 320px;
+}
 header {
   width: 100%;
   padding: .6rem 0;
@@ -24,9 +31,6 @@ header {
   top: 0;
   right: 0;
   left: 0;
-  height: 96px;
-  border-bottom: 2px solid rgba(126, 126, 126, 0.63);
-  text-decoration: none;
   background-color: rgb(0, 214, 214);
   box-shadow: var(--box-shadow);
   z-index: 3;
@@ -47,6 +51,13 @@ header {
 .nav-link:hover {
   font-size: 1.6rem;
 }
+.btn {
+  background-color: rgb(255, 184, 0);
+  width:11rem;
+  border-radius: 1.5rem;
+  margin: 0 auto;
+  color: #000 !important;
+}
 .navbar-nav{
   align-items: end;
   text-align: center;
@@ -54,18 +65,19 @@ header {
 .navbar-nav li{ 
   width: 10rem;
 }
-.container {
+.conteiner {
   display: inline-block;
   position: relative;
   justify-content: center;
 }
-.container h2,h3, h4 {
+.conteiner h2,h3, h4 {
   margin: 2%;
   padding: 1%;
-    font-family:'Franklin Gothic Medium';
-    font-size: 22px;
+    font-family: 'Times New Roman', Times, serif;
+    color: #010731f4;
+    font-size: 30px;
     line-height: 20px;
-    margin-top: 10px;
+    margin-top: 40px;
     text-decoration: underline;
     text-align: center;
 }
@@ -73,19 +85,20 @@ header {
   margin: 1%;
   padding: 1%;
   text-align: justify;
-  font-family: 'Franklin Gothic Medium';
+  font-family: 'Times New Roman', Times, serif;
   font-style: italic;
-  background-color: #42e1ecd0;
-  font-size: 22px;
+  background-color: #dcebecd0;
+  font-size: 20px;
+  border-radius: 2rem;
   }
-  .container img {
+  .conteiner img {
     position: relative;
     padding: 10px;
     top: 2px;
     left: 30vw;
     width: 35vw;
     border-radius: 5vw;
-    background-color: rgba(148, 243, 255, 0.471);
+    background-color: rgba(236, 250, 251, 0.758);
   }
 .footer{
   background: black;
@@ -141,84 +154,13 @@ header {
   color: #358de6;
   background-color: #ffffff;
 }
-@media (max-width:1024px){
-  .logo{
-    width: 10%;
-} 
-.container {
-   display: inline-block;
-   position: relative;
-   justify-content: center;
- }
-.texto {
- text-align: justify;
- font-family: 'Franklin Gothic Medium';
- font-size: 22px;
+
+@media(max-width:1024px) {
+  html {
+    font-size: 60%;
   }
-.container img {
- position: relative;
- padding: 10px;
- top: 2px;
- left: 30vw;
- width: 35vw;
- border-radius: 5vw;
-}
- header h1 {
-   color:black;
-   font-size: 40px;
-   font-weight: 100;
-   font-style: normal;
-   display: inline-block;
-   position: absolute;
-   bottom: auto;
-   margin-left: 10px;
- }
- header nav {
-   width: 100%;
-   margin: 50px 0;
-   display: flex;
-   justify-content: end;
- }
- header nav ul {
-   display: flex;
-   list-style: none;
-   flex-wrap: wrap;
- }
- header nav ul li a {
-   color:black;
-   text-decoration: none;
-   display: block;
-   text-align: center;
-   font-style: normal;
-   font-size: 20px;
-   padding: 10px;
- }
- header nav ul li a:hover{
-   color: rgba(0, 0, 0, 0.4);
- }
- .footer{
-   background: black;
-   text-align: center;
-   padding: 2% 0;
- }
- .footer h3{
-   color: #ffffff;
-   padding-top: 30px
- }
- .footer p{
-   color: #ffffff;
-   font-size: 13px;
- }
- .fa-brands{
-  font-size: 4vw; 
-  margin: 2vw;
-  width: 6vw;
-  height: 6vw;
- }
- .btn {
-  background-color: rgb(255, 184, 0);
-  width:8rem;
-  border-radius: 1.5rem;
-  margin: 0 auto;
-  color: #000 !important;
+  .navbar-brand img{
+    width: 130px;
+    height: 90px;
+  }
 }
